# pip-audit-html

./: .gitattributes  .gitignore  000_init.bat  000_init.sh  001_env.sh  002_activate.bat  002_activate.sh  003_setup.bat  003_setup.sh  004_run.bat  004_run.sh  005_run_test.bat  005_run_test.sh  006_run_code_cov.bat  006_run_code_cov.sh  007_run_audit.bat  007_run_audit.sh  008_deactivate.bat  008_deactivate.sh  009_build.bat  009_build.sh  010_publish_testpypi.bat  010_publish_testpypi.sh  011_publish_pypi.bat  011_publish_pypi.sh  README.md  main.py  pyproject.toml  pytest.ini  session_1.md
.github/workflows/: workflow.yml
src/pip_audit_html/: __init__.py  cli.py  converter.py  server.py
tests/: test_main.py
